<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Product Management System</string>
    <string name="welcome">Welcome to Product Management System</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="name">Name</string>
    <string name="products">Products</string>
    <string name="cart">Cart</string>
    <string name="add_to_cart">Add to Cart</string>
    <string name="checkout">Checkout</string>
    <string name="price">Price</string>
    <string name="quantity">Quantity</string>
    <string name="total">Total</string>
    <string name="logout">Logout</string>
</resources> 